--- a/project/sass/_vars.scss
+++ b/project/sass/_vars.scss
@@ -1,4 +1,6 @@
-$primaryColor: #27ae60;
-$secondaryColor: white;
-$fontColor : #43454a;
+// $primaryColor: #2;
 
+$primaryColor: #3e96ff;
+$darkenColor: #000000;
+$darkGray: #979ea6;
+$secondaryColor: #eff4f9;
