--- a/project/sass/style.scss
+++ b/project/sass/style.scss
@@ -1,8 +1,36 @@
 @import "vars";
+@import "header";
+@import "main";
+@import "topics";
 
 body {
   font-family: "Poppins", Arial, sans-serif;
-  padding: 0;
+  padding: 10px;
   margin: 0;
-  background-color: $primaryColor;
+  touch-action: none;
+  width: 90vw;
+  font-size: 1rem;
+  // background-color: $primaryColor;
 }
+
+figure {
+  margin: 0;
+  padding: 0;
+}
+
+
+// .swap{
+//   background-color: aqua;
+//   width: 100%;
+//   height: 200px;
+// }
+
+// .container{
+//   height: 198px;
+//   width: 134px;
+//   background-color: rebeccapurple;
+//   // margin-left:20px ;
+//   border-radius: 20px;
+//   position: absolute;
+//   user-select: text;
+// }
