--- a/project/sass/_vars.scss
+++ b/project/sass/_vars.scss
@@ -1,6 +1,9 @@
-// $primaryColor: #2;
-
 $primaryColor: #3e96ff;
 $darkenColor: #000000;
 $darkGray: #979ea6;
 $secondaryColor: #eff4f9;
+
+// Default Sizes
+$heightTopics: 80px;
+// card padding
+$cardTopicPadding: 25px;
