--- a/project/sass/style.scss
+++ b/project/sass/style.scss
@@ -2,35 +2,28 @@
 @import "header";
 @import "main";
 @import "topics";
-
-body {
-  font-family: "Poppins", Arial, sans-serif;
-  padding: 10px;
+@import "cards";
+@import "news-card";
+:root {
   margin: 0;
-  touch-action: none;
-  width: 90vw;
+  padding: 0;
   font-size: 1rem;
-  // background-color: $primaryColor;
+  touch-action: none;
+  font-family: "Poppins", Arial, sans-serif;
 }
 
-figure {
-  margin: 0;
+body {
+  padding: 10px;
+  // width: 100%;
+  height: 100vh;
+  margin:0;
+}
+
+figure{
   padding: 0;
 }
 
 
-// .swap{
-//   background-color: aqua;
-//   width: 100%;
-//   height: 200px;
-// }
-
-// .container{
-//   height: 198px;
-//   width: 134px;
-//   background-color: rebeccapurple;
-//   // margin-left:20px ;
-//   border-radius: 20px;
-//   position: absolute;
-//   user-select: text;
-// }
+ul{
+  padding: 0;
+}
